--- a/Gutop.Model/Entity/Entity.tt
+++ b/Gutop.Model/Entity/Entity.tt
@@ -19,7 +19,7 @@ using System.Collections.Generic;
 using System.ComponentModel.DataAnnotations;
 using System.ComponentModel.DataAnnotations.Schema;
 using System.Data.Entity.Spatial;
-
+using Gutop.Model.Enum;
 namespace Gutop.Model.Entity
 {
 <# manager.EndBlock(); #>
@@ -88,9 +88,9 @@ namespace Gutop.Model.Entity
                 bool isKey=Convert.ToBoolean(row["IsKey"]);
                 if (allowDBNull && !colType.Equals("String") && !colType.Equals("Byte[]"))
                     colType = "Nullable<" + colType + ">";
-                if (colName.EndsWith("Enum"))
-                    colType = colName.Substring(0, colName.Length - "Enum".Length) + "Index";
                 string comment = commentTable.Select("Field='"+colName+"'")[0]["Comment"].ToString().Replace("\r\n"," ").Replace("\r"," ").Replace("\n"," ");
+                if (comment.StartsWith("枚举|"))
+                    colType = comment.Split('|')[1];
                 this.WriteLine(string.Format("{0}/// <summary>",new String(' ', 8)));
                 this.WriteLine(string.Format("{0}///{1}", new String(' ', 8), comment));
                 this.WriteLine(string.Format("{0}/// </summary>", new String(' ', 8)));
