--- a/Gutop.UI/Views/LayoutFluid.cshtml
+++ b/Gutop.UI/Views/LayoutFluid.cshtml
@@ -114,27 +114,36 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
                 <a class="navbar-brand" href="#">千针石林</a>
             </div>
-            <ul class="nav navbar-nav navbar-left">
-                @{
-                    foreach (var nav in wrapperMenuInfo.Value)
-                    {
-                        <li class="@(nav.value.Id == mathedNav.value?.Id ? "active" : string.Empty)">
-                            <a href="@(nav.value.Url)">@(nav.value.Description)</a>
-                        </li>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-left">
+                    @{
+                        foreach (var nav in wrapperMenuInfo.Value) {
+                            <li class="@(nav.value.Id == mathedNav.value?.Id ? "active" : string.Empty)">
+                                <a href="@(nav.value.Url)">@(nav.value.Description)</a>
+                            </li>
+                        }
                     }
-                }
-                @*<li class="active"><a href="#">dashboard</a></li>
-                    <li><a href="#">逆变器</a></li>
-                    <li><a href="#">镇流器</a></li>*@
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">设置</a></li>
-                <li><a href="#">帮助</a></li>
-                <li><a href="#">eeroom</a></li>
-            </ul>
-        </div>
+                    @*<li class="active"><a href="#">dashboard</a></li>
+            <li><a href="#">逆变器</a></li>
+            <li><a href="#">镇流器</a></li>*@
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">设置</a></li>
+                    <li><a href="#">帮助</a></li>
+                    <li><a href="#">eeroom</a></li>
+                </ul>
+             </div>
+           
+            </div>
+
     </nav>
 
     <div class="container-fluid">
